RESOLVED FIXED 222331
Fix MetalANGLE backend crashes in video texture tests
https://bugs.webkit.org/show_bug.cgi?id=222331
Summary Fix MetalANGLE backend crashes in video texture tests
Kyle Piddington
Reported 2021-02-23 13:34:59 PST
Fix MetalANGLE backend crashes in video texture tests
Attachments
Patch (39.42 KB, patch)
2021-02-23 13:35 PST, Kyle Piddington
no flags
Patch (41.63 KB, patch)
2021-02-25 14:48 PST, Kyle Piddington
dino: review+
Kyle Piddington
Comment 1 2021-02-23 13:35:22 PST
EWS Watchlist
Comment 2 2021-02-23 13:36:30 PST
Note that there are important steps to take when updating ANGLE. See https://trac.webkit.org/wiki/UpdatingANGLE
Kyle Piddington
Comment 3 2021-02-25 14:48:17 PST
Dean Jackson
Comment 4 2021-02-25 15:15:39 PST
Comment on attachment 421569 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=421569&action=review > Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/IOSurfaceSurfaceMtl.mm:43 > +// clang-format off Did you mean to leave this in? > Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/TextureMtl.mm:674 > + if(mState.getType() == gl::TextureType::Rectangle) > + { > + samplerDesc.normalizedCoordinates = NO; > + } > + else > + { > + samplerDesc.normalizedCoordinates = YES; > + } Use a ternary?
Dean Jackson
Comment 5 2021-02-25 15:28:20 PST
Radar WebKit Bug Importer
Comment 6 2021-02-25 15:29:17 PST
Note You need to log in before you can comment on or make changes to this bug.